--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                 <div> <span class="title img-indent3">HELLO!</span>
                   <div class="color-p"> <strong class="color-2-1">S CUBE</strong><br>
                     <div class="color-2-2" id="service">
-                      <H5>from <strong>PAZHUPARAMBIL </strong>group</H5>
+                      <div >
+                          <img class="name" src="images/name.png" alt="">
+                      </div>
+
                     </div>
                     
                     </div>
