--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </div>
               
               <div class="inner" >
-                <div> <span class="title img-indent3">HELLO!</span>
+                <div>
                   <div class="color-p"> <strong class="color-2-1">S CUBE</strong><br>
                     <div class="color-2-2" id="service">
                       <div >
